<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_recent"
          android:title="@string/history"
          android:icon="@drawable/ic_history_white_36dp"
          app:showAsAction="ifRoom|collapseActionView" />
</menu>