...
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:id="@+id/watchNowBar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentBottom="true"
		android:background="@color/colorPrimary"
		android:padding="10dp">

...
